# rust_blog

./: .env  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
